fixed navigation menu alignment

--- a/web/themes/blondytan2/styles/scss/base/_layout.scss
+++ b/web/themes/blondytan2/styles/scss/base/_layout.scss
@@ -57,8 +57,7 @@ body {
   float: none;
 
   .to-portal {
-    padding-top: 14px;
-    padding-bottom: 14px;
+    padding: 14px 9px;
   }
 }
 
